# telegram-music-bot

./: .env.example  Dockerfile  callbacks.py  keyboards.py  main.py  pyproject.toml
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/ru/LC_MESSAGES/: messages.mo  messages.po
youtube_api/: __init__.py  youtube_api.py
